--- a/HTML/Categories.html
+++ b/HTML/Categories.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 <h1>Welcome</h1>
+<div>
+    <p style="font-size: 20px; color: brown">
+        Hello World Jawo!
+    </p>
+</div>
 </body>
 </html>
