--- a/HTML/Categories.html
+++ b/HTML/Categories.html
@@ -3,22 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Category</title>
-    omar mosaad
 </head>
 <body>
-<h1>Welcome</h1>
 
-<h1>hiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii</h1>
+<header></header>
 
-<div>
-    <p style="font-size: 20px; color: brown">
-        Hello World Jawo!
-    </p>
-</div>
+<main>
+    <section class="carousel"></section>
+    <section class="main"></section>
+</main>
 
-<div>
-    l shbab
-</div>
-
+<footer></footer>
 </body>
 </html>
