--- a/HTML/Categories.html
+++ b/HTML/Categories.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Category</title>
+    <link rel="stylesheet" href="../CSS/category.css">
 </head>
 <body>
 
 <header></header>
-
 <main>
     <section class="carousel"></section>
-    <section class="main"></section>
+    <section class="main">
+    </section>
 </main>
 
 <footer></footer>
