--- a/HTML/Categories.html
+++ b/HTML/Categories.html
@@ -2,18 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Category</title>
-    <link rel="stylesheet" href="../CSS/category.css">
+    <link rel="stylesheet" href="../CSS/Categories.css">
 </head>
 <body>
-
 <header></header>
 <main>
     <section class="carousel"></section>
+
     <section class="main">
+        <div class="card">
+            <div class="card-img">
+                <img src="../Images/3.jpg" alt="loading">
+            </div>
+            <div class="card-info">
+                <div class="card-name">Black Horse</div>
+                <div class="card-price">1300.50</div>
+            </div>
+        </div>
     </section>
 </main>
-
 <footer></footer>
 </body>
+<script src="../Scripts/jquery.js"></script>
+<script src="../Scripts/Categories.js"></script>
 </html>
