Add Categories Images from JSON
1. add some animation to categories cards.
2. getting images data from json file

--- a/HTML/Categories.html
+++ b/HTML/Categories.html
@@ -13,17 +13,7 @@
 <main>
     <section class="carousel"></section>
 
-    <section class="main">
-        <div class="card">
-            <div class="card-img">
-                <img src="../Images/3.jpg" alt="loading">
-            </div>
-            <div class="card-info">
-                <div class="card-name">Black Horse</div>
-                <div class="card-price">1300.50</div>
-            </div>
-        </div>
-    </section>
+    <section class="main"></section>
 </main>
 <footer></footer>
 </body>
