change style of scrollbar

--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="../CSS/Style.css"/>
     
     <link rel="stylesheet" href="../CSS/Header.css"/>
+
+    <link rel="stylesheet" href="../CSS/Scrollbar.css"/>
+
     
     <!-- * End Adding External Css Files -->
 
