add Products Style

--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -15,6 +15,8 @@
 
     <link rel="stylesheet" href="../CSS/Scrollbar.css"/>
 
+    <link rel="stylesheet" href="../CSS/ViewProducts.css"/>
+
     
     <!-- * End Adding External Css Files -->
 
@@ -61,18 +63,18 @@
 
 
     <!-- * Start View Trending -->
-    <div class="view_products">
+    <div class="view-products">
         <h1> Trending Now </h1>
         <div class="container">
 
-            <div class="products_header_wrapper">
-                <div class="categories_of_products">
-                    <button>Women</button>
+            <div class="products-header-wrapper">
+                <div class="categories-of-products">
+                    <button class="active">Women</button>
                 </div>
-                <div class="categories_of_products">
+                <div class="categories-of-products">
                     <button>Men</button>
                 </div>
-                <div class="categories_of_products">
+                <div class="categories-of-products">
                     <button>Sale</button>
                 </div>
             </div>
@@ -80,9 +82,43 @@
             <div class="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-inner-item">
-                        <div class="product_details"></div>
+                        <div class="product_details">
+                            <div class="Overlay"></div>
+                            <img src="../Images/Products/Women/2.jpg"/>
+                        </div>
+                    </div>
+
+                    <div class="carousel-inner-item">
+                        <div class="product_details">
+                            <img src="../Images/Products/Women/3.jpg"/>
+                        </div>
+                    </div>
+
+
+                    <div class="carousel-inner-item">
+                        <div class="product_details">
+                            <img src="../Images/Products/Women/4.jpg"/>
+                        </div>
+                    </div>
+
+
+                    <div class="carousel-inner-item">
+                        <div class="product_details">
+                            <img src="../Images/Products/Women/5.jpg"/>
+                        </div>
                     </div>
                 </div>
+
+                <!-- * start Arrows of carousel -->
+                <div class="carousel-control-prev">
+                    <img src="../Images/Products/left-arrow.png"/>
+                </div>
+                <div class="carousel-control-next">
+                    <img src="../Images/Products/right-arrow.png"/>
+                </div>
+
+                <!-- * end Arrows of carousel -->
+
             </div>
             
 
