--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -114,6 +114,7 @@
 
                     <div class="carousel-inner-item">
                         <div class="product_details">
+                            <div class="Overlay"></div>
                             <img src="../Images/Products/Women/5.jpg"/>
                         </div>
                         <button class="btn-carousel-view-details"> View Details</button>
