--- a/HTML/Cart.html
+++ b/HTML/Cart.html
@@ -30,7 +30,12 @@
                     <div class="product-image"><img src="../Images/2.jpg"></div>
                     <div class="product-detail">Black Trouser</div>
                 </div>
-                <div class="product-detail">3</div>
+                <div class="quantity-blocks">
+                    <button id="decrement" class="incdec">-</button>
+                    <div id="count" class="product-detail">0</div>
+                    <button id="increment" class="incdec">+</button>
+                </div>
+
                 <div class="product-detail">$54</div>
                 <div class="product-detail">$162</div>
             </div>
@@ -49,4 +54,6 @@
 
     </div>
 </body>
+<script src="../Scripts/jquery.js"></script>
+<script src="../Scripts/Cart.js"></script>
 </html>
