--- a/HTML/Categories.html
+++ b/HTML/Categories.html
@@ -5,17 +5,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link type="image/x-icon" sizes="96x96" rel="icon" href="../images/favicon/icons8-mens-hoodie-ios-16-filled-96.ico">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <title>Category</title>
     <link rel="stylesheet" href="../CSS/Categories.css">
 </head>
 <body>
-<header></header>
+<header id="header"></header>
 <main>
     <section class="carousel"></section>
-
     <section class="main"></section>
 </main>
-<footer></footer>
+<footer id="footer"></footer>
 </body>
 <script src="../Scripts/jquery.js"></script>
 <script src="../Scripts/Categories.js"></script>
