--- a/HTML/Cart.html
+++ b/HTML/Cart.html
@@ -11,7 +11,7 @@
     <header></header>
 
     <main class="main">
-        <section>
+        <section class="addOn">
             <div class="cart-header">
                 <div class="cart-title">Shopping Cart</div>
                 <div class="number-items">3 items</div>
@@ -25,23 +25,9 @@
             </div>
             <hr>
 
-            <div class="product">
-                <div>
-                    <div class="product-image"><img src="../Images/2.jpg"></div>
-                    <div class="product-detail">Black Trouser</div>
-                </div>
-                <div class="quantity-blocks">
-                    <button id="decrement" class="incdec">-</button>
-                    <div id="count" class="product-detail">0</div>
-                    <button id="increment" class="incdec">+</button>
-                </div>
-
-                <div class="product-detail">$54</div>
-                <div class="product-detail">$162</div>
-            </div>
-            <hr>
+           
         </section>
-
+        <div class="vl"></div>
 
         <section>
 
