--- a/HTML/Cart.html
+++ b/HTML/Cart.html
@@ -4,41 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Cart</title>
     <link rel="stylesheet" href="../CSS/Cart.css"/>
 </head>
 <body>
-    <header></header>
+<header></header>
 
-    <main class="main">
-        <section class="addOn">
-            <div class="cart-header">
-                <div class="cart-title">Shopping Cart</div>
-                <div class="number-items">3 items</div>
-            </div>
-            <hr>
-            <div class="list-details">
-                <div class="product-details">Product details</div>
-                <div class="quantity">Quantity</div>
-                <div class="price">Price</div>
-                <div class="total">Total</div>
-            </div>
-            <hr>
-
-           
-        </section>
-        <div class="vl"></div>
-
-        <section>
-
-        </section>
-
-    </main>
+<main class="main">
+    <section class="addOn">
+        <div class="cart-header">
+            <div class="cart-title">Shopping Cart</div>
+            <div class="number-items">3 items</div>
+        </div>
+        <hr>
+        <div class="list-details">
+            <div class="product-details">Product details</div>
+            <div class="quantity">Quantity</div>
+            <div class="price">Price</div>
+            <div class="total">Total</div>
+        </div>
+        <hr>
 
 
-    <footer></footer>
+    </section>
+    <div class="vl"></div>
 
-    </div>
+    <section>
+
+    </section>
+
+</main>
+
+
+<footer></footer>
+
+</div>
 </body>
 <script src="../Scripts/jquery.js"></script>
 <script src="../Scripts/Cart.js"></script>
