--- a/HTML/Cart.html
+++ b/HTML/Cart.html
@@ -17,7 +17,7 @@
     <section class="addOn">
         <div class="cart-header">
             <div class="cart-title">Shopping Cart</div>
-            <div class="number-items">3 items</div>
+            <div class="number-items">0 items</div>
         </div>
         <hr>
         <div class="list-details">
@@ -26,13 +26,45 @@
             <div class="price">Price</div>
             <div class="total">Total</div>
         </div>
-        <hr>
+
+    <section><hr></section>
 
 
     </section>
     <div class="vl"></div>
 
-    <section>
+    <section class="shipping-details">
+
+
+        <div>Shipping Details</div>
+        <hr>
+        <br>
+
+        <div class="inputs">
+
+
+                <label class="single-input-label" for="username">Enter your full name: </label>
+                <input type="text" class="full-name" name="fullname">
+
+
+
+                <label class="single-input-label" for="useremail">Enter your Email: </label>
+                <input type="text" class="user-email" name="useremail">
+
+
+                <label class="single-input-label" for="usermobile">Enter your Mobile: </label>
+                <input type="number" class="user-mobile" name="usermobile">
+
+
+                <label class="single-input-label" for="usermobile">Enter your Address: </label>
+                <input type="number" class="user-mobile" name="usermobile">
+
+
+        </div>
+
+        <div>
+            
+        </div>
 
     </section>
 
