--- a/HTML/Cart.html
+++ b/HTML/Cart.html
@@ -36,10 +36,10 @@
     <section class="shipping-details">
 
 
-        <div>Shipping Details</div>
+        <div class="shipping-details-title" style="margin-bottom: 25px; margin-top: 25px">Shipping Details</div>
         <hr>
         <br>
-
+        <br>
         <div class="inputs">
 
 
@@ -60,18 +60,22 @@
                 <input type="number" class="user-mobile" name="usermobile">
 
 
-        </div>
-
-        <div>
+            </div>
             
-        </div>
+            <div class="total-price">Total Price: </div>
+                
+                <button class="proceed-btn" type="button">CHECKOUT</button>
+                <br>
+                <hr>
+
+                <button type="button" class="continue-shopping">← Continue Shopping</button>
 
     </section>
 
 </main>
 
 
-<footer></footer>
+<footer id="footer"></footer>
 
 </div>
 </body>
