finished cart page

--- a/HTML/Cart.html
+++ b/HTML/Cart.html
@@ -10,8 +10,10 @@
     <title>Cart</title>
     <link rel="stylesheet" href="../CSS/Cart.css"/>
 </head>
-<body>
-    <header></header>
+<body class="cart-body">
+
+    <header id="header"></header>
+
 
 <main class="main">
     <section class="addOn">
@@ -23,7 +25,7 @@
         <div class="list-details">
             <div class="product-details">Product details</div>
             <div class="quantity">Quantity</div>
-            <div class="price">Price</div>
+            <div class="price-detail">Price</div>
             <div class="total">Total</div>
         </div>
 
