--- a/HTML/Product.html
+++ b/HTML/Product.html
@@ -1,12 +1,15 @@
 <html lang="en">
   <head>
     <title>Product</title>
+    <link rel="stylesheet" href="../CSS/product.css" />
   </head>
   <body>
     <div class="container-1">
       <div class="product-data">
         <!--it's content should be as row-->
-        <div class="product-img"></div>
+        <div class="product-img">
+          <img src="../images/product-test1.jpg" />
+        </div>
         <div class="product-desc"></div>
       </div>
     </div>
