structure of product page

--- a/HTML/Product.html
+++ b/HTML/Product.html
@@ -1,6 +1,7 @@
 <html lang="en">
   <head>
     <title>Product</title>
+    <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="stylesheet" href="../CSS/product.css" />
   </head>
   <body>
@@ -10,7 +11,7 @@
         <div class="product-img">
           <img src="../images/product-test1.jpg" />
         </div>
-        <div class="product-desc"></div>
+        <div class="product-desc">eeee</div>
       </div>
     </div>
   </body>
