Adding header and footer to product page

--- a/HTML/Product.html
+++ b/HTML/Product.html
@@ -1,10 +1,16 @@
 <html lang="en">
   <head>
     <title>Product</title>
+    <link rel="stylesheet" href="../CSS/HeaderAndFooter.css" />
+
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="stylesheet" href="../CSS/product.css" />
   </head>
   <body>
+    <!--* Start navbar Component -->
+    <div id="navbar-component"></div>
+    <!--* End navbar -->
+
     <div class="container-1">
       <div class="product-data">
         <!--it's content should be as row-->
@@ -14,5 +20,14 @@
         <div class="product-desc">eeee</div>
       </div>
     </div>
+
+    <!--* Start footer Component -->
+    <div id="footer-component"></div>
+    <!--* End footer Component -->
+
+    <!-- *  Start Script -->
+    <script src="../Scripts/jquery.js"></script>
+    <script src="../Scripts/Index.js"></script>
+    <!-- *  End Script -->
   </body>
 </html>
