--- a/HTML/Product.html
+++ b/HTML/Product.html
@@ -27,7 +27,7 @@
 
     <!-- *  Start Script -->
     <script src="../Scripts/jquery.js"></script>
-    <script src="../Scripts/Index.js"></script>
+    <script src="../Scripts/product.js"></script>
     <!-- *  End Script -->
   </body>
 </html>
