--- a/HTML/Categories.html
+++ b/HTML/Categories.html
@@ -12,7 +12,12 @@
 <body>
 <header id="header"></header>
 <main>
+    <div class="model-img-container">
+        <h1 class="word">Best Collections You can Find!</h1>
+        <img class="model-img" src="../Images/model1.jpg" alt="loading">
+    </div>
     <section class="carousel"></section>
+    <h1 style="text-align: center">Men Clothes</h1>
     <section class="main"></section>
 </main>
 <footer id="footer"></footer>
