--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -3,13 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
+    <link rel="stylesheet" href="../CSS/Registration.css">
     <link rel="stylesheet" href="../CSS/Login.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="container">
+<div class="parent">
+<div class="register-container">
+    <div class="container">
+        <div class="welcome">
+            <h1 class="logo-h1">Sign Up</h1>
+            <h2 class="site-quote">Quick And Easy</h2>
+        </div>
+        <div class="register-form-container">
+            <div class="register-form">
+                <input id="username" class="register-input-text" type="text" placeholder="New Username">
+                <input id="password" class="register-input-text" type="password" placeholder="New Password">
+                <button id="sign-up-btn" class="sign-up-btn">Sign Up</button>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+<div class="login-container">
     <div class="welcome">
         <h1 class="logo-h1">BOHO..</h1>
         <h2 class="site-quote">A New Revolution. A New Perspective.</h2>
@@ -17,10 +35,10 @@
     </div>
     <div class="login-form-container">
         <div class="login-form">
-            <input class="input-text" type="text" placeholder="Username">
-            <input class="input-text" type="text" placeholder="Password">
+            <input class="login-input-text" type="text" placeholder="Username">
+            <input class="login-input-text" type="text" placeholder="Password">
             <a class="login-btn" href="#">Log in</a>
-            <a class="create-new-account-btn" href="#">Create New Account</a>
+            <a id="sign-up" class="create-new-account-btn" href="#">Create New Account</a>
         </div>
     </div>
 </div>
