--- a/HTML/Product.html
+++ b/HTML/Product.html
@@ -10,8 +10,14 @@
     <!--* Start navbar Component -->
     <div id="navbar-component"></div>
     <!--* End navbar -->
+    <div class="free-shipping">
+      <p>FREE UK SHIPPING FOR ORDERS OF £95 OR MORE. FREE UK RETURNS.</p>
+    </div>
 
     <div class="container-1">
+      <div class="path-product">
+        <h3>Woman | tshirt | xxx</h3>
+      </div>
       <div class="product-data">
         <!--it's content should be as row-->
         <div class="product-img">
