--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -9,7 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/HeaderAndFooter.css"/>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script> 
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'></link>  
+     
 </head>
 <body>
 <div id="registration-page"></div>
@@ -30,6 +32,7 @@
 </div>
 <footer id="footer"></footer>
 </body>
+
 <script src="../Scripts/jquery.js"></script>
 <script src="../Scripts/Cookie.js"></script>
 <script src="../Scripts/Login.js"></script>
