--- a/HTML/Product.html
+++ b/HTML/Product.html
@@ -15,15 +15,46 @@
     </div>
 
     <div class="container-1">
+      <br />
       <div class="path-product">
         <h3>Woman | tshirt | xxx</h3>
       </div>
       <div class="product-data">
         <!--it's content should be as row-->
         <div class="product-img">
-          <img src="../images/product-test1.jpg" />
+          <img src="../images/Products/Women/women-1.jpg" />
         </div>
-        <div class="product-desc">eeee</div>
+        <div class="product-desc">
+          <h1>Crochet Collar Detail Cardigan, Mint</h1>
+          <hr />
+          <p>£59.00</p>
+          <hr />
+          <h4>Size</h4>
+
+          <select>
+            <option>Select size</option>
+            <option>One size</option>
+          </select>
+          <h4>quantity</h4>
+          <div class="quantity-styling">
+            <button>-</button>
+            <input type="text" name="quantity" value="0" />
+            <button class="quantity-button">+</button>
+          </div>
+          <input class="add-to-cart" type="button" value="ADD TO CART" />
+
+          <h4>Description</h4>
+          <p>
+            Our elegant frilled cardigan is constructed from a midnight
+            wool-blend and features a decorative knit, relaxed open collar,
+            central corozo buttons and ribbed edges. A UK 6-8 can expect a
+            relaxed fit whilst a UK 12 will wear more fitted.
+          </p>
+          <h4>Size Fit</h4>
+          <p>Length: 46cm, Across Width (Bust): 51cm, Sleeve: 49cm.</p>
+          <h4>Material</h4>
+          <p>60% Acrylic, 30% Polyester, 10% Wool.</p>
+        </div>
       </div>
     </div>
 
