Displying product data using Json

--- a/HTML/Product.html
+++ b/HTML/Product.html
@@ -22,12 +22,12 @@
       <div class="product-data">
         <!--it's content should be as row-->
         <div class="product-img">
-          <img src="../images/Products/Women/women-1.jpg" />
+          <img id="product-img" src="../images/Products/Women/women-1.jpg" />
         </div>
         <div class="product-desc">
-          <h1>Crochet Collar Detail Cardigan, Mint</h1>
+          <h1 id="product-name"></h1>
           <hr />
-          <p>£59.00</p>
+          <p id="product-price"></p>
           <hr />
           <h4>Size</h4>
 
@@ -44,16 +44,11 @@
           <input class="add-to-cart" type="button" value="ADD TO CART" />
 
           <h4>Description</h4>
-          <p>
-            Our elegant frilled cardigan is constructed from a midnight
-            wool-blend and features a decorative knit, relaxed open collar,
-            central corozo buttons and ribbed edges. A UK 6-8 can expect a
-            relaxed fit whilst a UK 12 will wear more fitted.
-          </p>
+          <p id="product-desc"></p>
           <h4>Size Fit</h4>
-          <p>Length: 46cm, Across Width (Bust): 51cm, Sleeve: 49cm.</p>
+          <p id="product-fit"></p>
           <h4>Material</h4>
-          <p>60% Acrylic, 30% Polyester, 10% Wool.</p>
+          <p id="product-material"></p>
         </div>
       </div>
     </div>
