plus and minus quantity buttons

--- a/HTML/Product.html
+++ b/HTML/Product.html
@@ -17,7 +17,7 @@
     <div class="container-1">
       <br />
       <div class="path-product">
-        <h3>Woman | tshirt | xxx</h3>
+        <h3><span id="category-name"></span> | <span id="pro-name"></span></h3>
       </div>
       <div class="product-data">
         <!--it's content should be as row-->
@@ -37,9 +37,9 @@
           </select>
           <h4>quantity</h4>
           <div class="quantity-styling">
-            <button>-</button>
-            <input type="text" name="quantity" value="0" />
-            <button class="quantity-button">+</button>
+            <button id="dec-quantity">-</button>
+            <input id="crnt-quantity" type="text" name="quantity" value="0" />
+            <button id="inc-quantity">+</button>
           </div>
           <input class="add-to-cart" type="button" value="ADD TO CART" />
 
