some changes in home-page

--- a/HTML/Product.html
+++ b/HTML/Product.html
@@ -3,7 +3,9 @@
     <title>Product</title>
     <link rel="stylesheet" href="../CSS/HeaderAndFooter.css" />
 
-    <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/Style.css" />
+    <link rel="stylesheet" href="../CSS/Scrollbar.css" />
+
     <link rel="stylesheet" href="../CSS/product.css" />
   </head>
   <body>
