fix media screen in product

--- a/HTML/Product.html
+++ b/HTML/Product.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../CSS/Scrollbar.css" />
 
     <link rel="stylesheet" href="../CSS/product.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.0/css/all.css"/>
   </head>
   <body>
     <!--* Start navbar Component -->
