--- a/HTML/Product.html
+++ b/HTML/Product.html
@@ -60,6 +60,7 @@
     <!-- *  Start Script -->
     <script src="../Scripts/jquery.js"></script>
     <script src="../Scripts/product.js"></script>
+    <script src="../Scripts/}Cookie.js"></script>
     <!-- *  End Script -->
   </body>
 </html>
