Adding cookie to add to cart and handling some wrong cases

--- a/HTML/Product.html
+++ b/HTML/Product.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="../CSS/Scrollbar.css" />
 
     <link rel="stylesheet" href="../CSS/product.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.0/css/all.css"/>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v6.2.0/css/all.css"
+    />
   </head>
   <body>
     <!--* Start navbar Component -->
@@ -44,7 +47,12 @@
             <input id="crnt-quantity" type="text" name="quantity" value="0" />
             <button id="inc-quantity">+</button>
           </div>
-          <input class="add-to-cart" type="button" value="ADD TO CART" />
+          <input
+            class="add-to-cart"
+            id="add-to-cart"
+            type="button"
+            value="ADD TO CART"
+          />
 
           <h4>Description</h4>
           <p id="product-desc"></p>
@@ -63,7 +71,7 @@
     <!-- *  Start Script -->
     <script src="../Scripts/jquery.js"></script>
     <script src="../Scripts/product.js"></script>
-    <script src="../Scripts/}Cookie.js"></script>
+    <script src="../Scripts/Cookie.js"></script>
     <!-- *  End Script -->
   </body>
 </html>
