Categories to product preview

--- a/HTML/Categories.html
+++ b/HTML/Categories.html
@@ -17,7 +17,7 @@
     <div class="model-img-container">
         <h1 class="word1">New Clothes..New Passion</h1>
         <h2 class="word2">Best Collections</h2>
-        <img class="model-img" src="../Images/mainimage.jpeg" alt="loading">
+        <img class="model-img" src="../Images/model1.jpg" alt="loading">
     </div>
     <div class="parent">
         <div class="slider">
