add account link into home page and link pages with each other in navbar component

--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -29,6 +29,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">    </head>
+    
+        <script src="../Scripts/jquery.js"></script>
+        <script src="../Scripts/Cookie.js"></script>
     <body>
       
         <!--* Start Header Component -->
@@ -57,7 +60,6 @@
 
 
         <!-- *  Start Script -->
-        <script src="../Scripts/jquery.js"></script>
         <script src="../Scripts/Index.js"></script>
         <!-- *  End Script -->
 
