--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -28,15 +28,16 @@
             <input id="l-username" class="login-input-text" type="text" placeholder="Username">
             <input id="l-password" class="login-input-text" type="password" placeholder="Password">
             <a id="login-btn" class="login-btn" href="#">Log in</a>
-            <a id="sign-up" class="create-new-account-btn" href="#">Create New Account</a>
+            <a id="sign-up" class="create-new-account-btn" href="#sign-up">Create New Account</a>
         </div>
     </div>
 </div>
 <footer id="footer"></footer>
-</body>
 
 <script src="../Scripts/jquery.js"></script>
 <script src="../Scripts/Cookie.js"></script>
 <script src="../Scripts/Login.js"></script>
 <script src="../Scripts/Registration.js"></script>
+</body>
+
 </html>
