my updates on categories and about page

--- a/HTML/Categories.html
+++ b/HTML/Categories.html
@@ -21,7 +21,7 @@
     </div>
     <div class="parent">
         <div class="slider">
-            <div class="left"><img id="left" src="../Images/Products/left-arrow.png" alt=""></div>
+            <!-- <div class="left"><img id="left" src="../Images/Products/left-arrow.png" alt=""></div>
             <div class="BOX box1">
                 <div class="slide-img">
                     <img src="../images/1.jpg" alt="Loading">
@@ -143,7 +143,7 @@
                 </div>
             </div>
             
-            <div class="right"><img id="right" src="../Images/Products/right-arrow.png" alt=""></div>
+            <div class="right"><img id="right" src="../Images/Products/right-arrow.png" alt=""></div> -->
         </div>
     </div>
     <h1 style="text-align: center">Men Clothes</h1>
