--- a/HTML/Categories.html
+++ b/HTML/Categories.html
@@ -15,9 +15,9 @@
 <header id="header"></header>
 <main>
     <div class="model-img-container">
-        <h1 class="word1">New Clothes..New Passion</h1>
-        <h2 class="word2">Best Collections</h2>
-        <img class="model-img" src="../Images/model1.jpg" alt="loading">
+        <h1 id="word1" class="word1">New Clothes..New Passion</h1>
+        <h2 id="word2" class="word2">Best Collections</h2>
+        <img id="page-main-img" class="model-img" src="dsa" alt="loading">
     </div>
     <div class="parent">
         <div class="slider">
