--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -18,7 +18,7 @@
 
         <link rel="stylesheet" href="../CSS/Scrollbar.css"/>
         
-        <link rel="stylesheet" href="../CSS/AllCategories.css"/>
+        <link id="home-page-cat" rel="stylesheet" href="../CSS/AllCategories.css"/>
         
         <link rel="stylesheet" href="../CSS/ViewProducts.css"/>
 
