--- a/HTML/Cart.html
+++ b/HTML/Cart.html
@@ -182,5 +182,6 @@
     </div>
 </body>
 <script src="../Scripts/jquery.js"></script>
+<script src="../Scripts/Cookie.js"></script>
 <script src="../Scripts/Cart.js"></script>
 </html>
