--- a/HTML/Cart.html
+++ b/HTML/Cart.html
@@ -9,6 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Cart</title>
     <link rel="stylesheet" href="../CSS/Cart.css"/>
+    <link rel="stylesheet" href="../CSS/HeaderAndFooter.css"/>
+    <link type="image/x-icon" sizes="96x96" rel="icon" href="../images/favicon/icons8-mens-hoodie-ios-16-filled-96.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    
 </head>
 <body class="cart-body">
 
