--- a/HTML/Categories.html
+++ b/HTML/Categories.html
@@ -25,7 +25,7 @@
             <div class="right"><img id="right" src="../Images/Products/right-arrow.png" alt=""></div>
         </div>
     </div>
-    <h1 style="text-align: center">Men Clothes</h1>
+    <hr style="width: 500px; text-align: center;">
     <section class="main"></section>
 </main>
 <footer id="footer"></footer>
