change some style in contact-us page

--- a/HTML/ContactUs.html
+++ b/HTML/ContactUs.html
@@ -45,6 +45,8 @@
                         <div class="mb-2">
                             <i class="fa-solid fa-location-dot"></i>  
                             <h6> Address </h6>
+                            <p> Smart Village, Cairo-Egypt </p>
+
                         </div>
                         <div class="mb-2">
                             <i class="fa-solid fa-phone"></i>
