change body height in style.css

--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -16,19 +16,22 @@
     <!--* Start navbar Component -->
     <div id="navbar-component"></div>
     <!--* End navbar -->
+
     <div class="about-container">
-      <img src="../images/aboutUs.jpg" />
+      <div class="container">
+        <div class="overlay"></div>
+        <div class="about-bg"></div>
+      </div>
 
-      <div class="right-side">sssssssssss</div>
     </div>
+
     <!--* Start footer Component -->
-
     <div id="footer-component"></div>
-
     <!--* End footer Component -->
 
     <!-- *  Start Script -->
     <script src="../Scripts/jquery.js"></script>
+    <script src="../Scripts/Cookie.js"></script>
     <script src="../Scripts/aboutUs.js"></script>
     <!-- *  End Script -->
   </body>
