finishing about-us page

--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -21,6 +21,29 @@
       <div class="container">
         <div class="overlay"></div>
         <div class="about-bg"></div>
+        
+        <!-- * start details -->
+        <div class="about-container-details">
+          <div class="heading">
+            <h1>-BOHO-</h1>
+            <h2>It isn't a brand name it is an identity</h2>
+          </div>
+          
+          <div class="text">
+            <h3>Vision</h3>  
+            <p>To be internationally recognised as an innovative brand</p>
+          </div>
+
+          <div class="text">
+            <h3>Mission</h3>
+            <p>To be our customers' second skin and to encourage their constant evolution</p>
+          </div>
+
+          <div class="text">
+            <h3>Values</h3>
+            <p>Fit | Innovation | Quality | Sensuality</p>
+          </div>
+        </div>
       </div>
 
     </div>
