Game Now Ends And Create cookie discount

--- a/HTML/2048.html
+++ b/HTML/2048.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <title>2048</title>
     <link rel="stylesheet" href="../CSS/2048.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../CSS/HeaderAndFooter.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
+    <link type="image/x-icon" sizes="96x96" rel="icon" href="../images/favicon/icons8-mens-hoodie-ios-16-filled-96.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
 <h1>2048</h1>
@@ -14,5 +22,6 @@
 </div>
 </body>
 <script src="../Scripts/jquery.js"></script>
+<script src="../Scripts/Cookie.js"></script>
 <script src="../Scripts/2048.js"></script>
 </html>
