--- a/HTML/GamesMenu.html
+++ b/HTML/GamesMenu.html
@@ -2,12 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="../CSS/GamesMenu.css">
 </head>
 <body>
-<div>
-  <a href="2048.html">2048 Game</a>
-  <a href="Pokemon.html">Pokemon Game</a>
+<div class="main">
+
+    <h1>Play games and Win up to 10% discount</h1>
+    <div class="child">
+        <div class="grandChild1">
+            <img class="game1-img" src="../Images/pokemon.jpeg" alt="">
+            <span>POKEMON</span>
+        </div>
+        <div class="grandChild2">
+            <img class="game2-img" src="../Images/2048.webp" alt="">
+            <span>2048</span>
+        </div>
+    </div>
 </div>
+
+<script src="../Scripts/jquery.js"></script>
+
+<script src="../Scripts/GamesMenu.js"></script>
 </body>
 </html>
