add scrollbar style into Cart , Categories page

--- a/HTML/Cart.html
+++ b/HTML/Cart.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script> 
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
+    <link rel="stylesheet" href="../CSS/Style.css"/>
+    <link rel="stylesheet" href="../CSS/Scrollbar.css"/>
 
 </head>
 <body class="cart-body">
