--- a/HTML/Categories.html
+++ b/HTML/Categories.html
@@ -9,7 +9,9 @@
     <link type="image/x-icon" sizes="96x96" rel="icon" href="../images/favicon/icons8-mens-hoodie-ios-16-filled-96.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <title>Category</title>
+    <link rel="stylesheet" href="../CSS/Scrollbar.css"/>
     <link rel="stylesheet" href="../CSS/Categories.css">
+
 </head>
 <body>
 <header id="header"></header>
