added header to games

--- a/HTML/2048.html
+++ b/HTML/2048.html
@@ -14,12 +14,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
 <body>
-<h1>2048</h1>
-<h2>If The Board Is Filled The Game Will End!</h2>
-<hr>
-<h3>Score: <span id="score">0</span></h3>
-<div id="board">
+<header id="header"></header>
+<div class="games-container">
+    <h1 class="game-name">2048</h1>
+    <h2 class="rule">If The Board Is Filled The Game Will End!</h2>
+    <hr>
+    <h3 class="score-text">Score: <span id="score">0</span></h3>
+    <div id="board">
+    </div>
 </div>
+<!--<footer id="footer"></footer>-->
 </body>
 <script src="../Scripts/jquery.js"></script>
 <script src="../Scripts/Cookie.js"></script>
