--- a/HTML/GamesMenu.html
+++ b/HTML/GamesMenu.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link type="image/x-icon" sizes="96x96" rel="icon" href="../images/favicon/icons8-mens-hoodie-ios-16-filled-96.ico">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <title>Document</title>
     <link rel="stylesheet" href="../CSS/GamesMenu.css">
+    <link rel="stylesheet" href="../CSS/HeaderAndFooter.css"/>
+
 </head>
 <body>
-<div class="main">
-
+<header id="header"></header>
+<div class="games-container">
     <h1>Play games and Win up to 10% discount</h1>
     <div class="child">
         <div class="grandChild1">
@@ -22,6 +29,7 @@
         </div>
     </div>
 </div>
+<footer id="footer"></footer>
 
 <script src="../Scripts/jquery.js"></script>
 
