--- a/HTML/2048.html
+++ b/HTML/2048.html
@@ -16,8 +16,8 @@
 <body>
 <header id="header"></header>
 <div class="games-container">
-    <h1 class="game-name">2048</h1>
-    <h2 class="rule">If The Board Is Filled The Game Will End!</h2>
+    <h1 class="game-name">Higher Score = Higher Discount 💙</h1>
+    <h2 class="rule">Use Arrows To Play!</h2>
     <hr>
     <h3 class="score-text">Score: <span id="score">0</span></h3>
     <div id="board">
