--- a/HTML/AboutUs.html
+++ b/HTML/AboutUs.html
@@ -53,7 +53,7 @@
     <!-- *  Start Script -->
     <script src="../Scripts/jquery.js"></script>
     <script src="../Scripts/Cookie.js"></script>
-    <script src="../Scripts/aboutUs.js"></script>
+    <script src="../Scripts/aboutUS.js"></script>
     <!-- *  End Script -->
   </body>
 </html>
